# BlackJacks

./: .gitignore  Cargo.toml  README.md  bench.sh
CBlackJack/: readme.md  xmake.lua
CBlackJack/src/: cardpile.c  dealer.c  dealer.h  main.c  player.c  player.h  strategies.h  table.c  table.h  vector.h
CPPBlackJack/: xmake.lua
CPPBlackJack/src/: cardpile.cpp  dealer.cpp  dealer.h  main.cpp  player.cpp  player.h  strategies.h  table.cpp  table.h
CSharpBlackJack/: .gitignore  CSharpBlackJack.csproj  CSharpBlackJack.sln  CardPile.cs  Player.cs  Program.cs  README.md  Strategies.cs  Table.cs
CrystalBlackJack/: .gitignore  readme.md  shard.yml
CrystalBlackJack/src/: card.cr  cardpile.cr  dealer.cr  deck.cr  main.cr  player.cr  strategies.cr  table.cr
GoBlackJack/: cardpile.go  dealer.go  deck.go  go.mod  main.go  player.go  readme.md  strategies.go  table.go
JSBlackJack/: card.js  cardpile.js  dealer.js  deck.js  main.REMOVED.git-id  main.js  package.json  player.js  readme.md  strategies.js  table.js
NimBlackJack/: NimBlackJack.nimble  main.nim  nim.cfg  playertable.nim  readme.md  strategies.nim
NimBlackJack/src/: NimBlackJack.nim  playertable.nim  strategies.nim
PyBlackJack/: cardpile.py  main.py  player.py  readme.md  strategies.py  table.py
RustBlackJack/: Cargo.toml  readme.md
RustBlackJack/src/: card.rs  cardpile.rs  dealer.rs  deck.rs  main.rs  player.rs  strategies.rs  table.rs
ZigBlackJack/: build.zig  readme.md
ZigBlackJack/src/: card.zig  cardpile.zig  constants.zig  (+6 more)
src/: card.rs  cardpile.rs  dealer.rs  deck.rs  player.rs  table.rs
(+1 files in other folders)
