[package]
name = "rust_black_jack"
version = "0.1.0"
authors = ["jasontsorlinis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.48", features = ["v3"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
